fix: navber z-index issue

--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -11,6 +11,7 @@
 	padding: 0px;
 	font: 'sans-serif';
 	font-size: 18px;
+	z-index: 999;
 }
 
 .dropmenu ul {
